fix: ui overflow

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -294,3 +294,7 @@ main {
     left: 20px
   }
 }
+
+.h-svh{
+  height: 100svh;
+}
